[gd_scene load_steps=10 format=2]

[ext_resource path="res://grid.png" type="Texture" id=1]
[ext_resource path="res://unit_rect.png" type="Texture" id=2]
[ext_resource path="res://Unit.gd" type="Script" id=3]
[ext_resource path="res://Grid.gd" type="Script" id=4]
[ext_resource path="res://CellArea2D.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 324, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 399 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 49, 49 )

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="Grid" type="Node2D" parent="."]
position = Vector2( 56, 240 )
script = ExtResource( 4 )
cell_packed_scene = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Grid"]
position = Vector2( -1, -1 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="UpperBounds" type="StaticBody2D" parent="Grid"]
position = Vector2( 301, -8 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid/UpperBounds"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LowerBounds" type="StaticBody2D" parent="Grid"]
position = Vector2( 301, 810 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid/LowerBounds"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightBounds" type="StaticBody2D" parent="Grid"]
position = Vector2( 614, 401 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid/RightBounds"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftBounds" type="StaticBody2D" parent="Grid"]
position = Vector2( -12, 401 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid/LeftBounds"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cells" type="Node2D" parent="Grid"]
__meta__ = {
"_edit_lock_": true
}

[node name="Units" type="Node2D" parent="Grid"]

[node name="Unit" type="KinematicBody2D" parent="Grid/Units"]
position = Vector2( 176, 176 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Grid/Units/Unit"]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid/Units/Unit"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="SelectionArea2D" type="Area2D" parent="Grid/Units/Unit"]
collision_layer = 2
collision_mask = 0
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grid/Units/Unit/SelectionArea2D"]
visible = false
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Grid/Units/Unit"]

[connection signal="picked_up" from="Grid/Units/Unit" to="Grid" method="_on_Unit_picked_up"]
[connection signal="released" from="Grid/Units/Unit" to="Grid" method="_on_Unit_released"]
[connection signal="input_event" from="Grid/Units/Unit/SelectionArea2D" to="Grid/Units/Unit" method="_on_SelectionArea2D_input_event"]
[connection signal="tween_completed" from="Grid/Units/Unit/Tween" to="Grid/Units/Unit" method="_on_Tween_tween_completed"]
